--- a/contact.html
+++ b/contact.html
@@ -70,8 +70,8 @@
             </div>
             <div class="form-row justify-content-center align-items-center">
                 <div class="col-md-4">
-                    <label for="validationTextarea">Textarea</label>
-                    <textarea class="form-control" id="validationTextarea" placeholder="Required example textarea" required></textarea>
+                    <label for="validationTextarea">Message</label>
+                    <textarea class="form-control" id="validationTextarea" placeholder="Please enter a message" required></textarea>
                     <div class="invalid-feedback">
                         Please enter a message in the textarea.
                     </div>
