--- a/contact.html
+++ b/contact.html
@@ -88,6 +88,16 @@
         </form>
     </div>
     
-    
+    <!-- footer -->
+    <footer class="page-footer font-small navbar-dark bg-dark text-light">
+        <div class="footer-copyright text-center py-3">
+            <i class="fas fa-map-marker-alt"></i>&nbsp;Palm Street
+            <i class="fas fa-phone-alt"></i>&nbsp;0123456789
+            <i class="fas fa-envelope"></i>&nbsp;abc@example.com
+        </div>
+        <div class="footer-copyright text-center py-3">
+            © 2021 Copyright: Ming's Diner
+        </div>
+    </footer>
 </body>
 </html>
